sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:8: error: not found: value longeur
      for (i<-0 to longeur-2) {
                   ^AlgBubbleSort2:9: error: not found: value longeur
        longueur=longeur-1
                 ^